--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
 language: java
 after_success:
   - bash <(curl -s https://codecov.io/bash)
+  
+mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+
+mvn test -B
