--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,10 @@ after_success:
 mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 
 mvn test -B
+
+branches:
+  only:
+  - master
+  - entrega1_version2
+  
+  
